start: obs_set=2 exp prepare

--- a/exp_view.ipynb
+++ b/exp_view.ipynb
@@ -353,11 +353,11 @@
     "\"\"\"Ensemble KF data set (basic is EnSRF.) \"\"\"\n",
     "mems = 1000\n",
     "path_enkf = outdir + 'normal_EnKF' + str(mems) + 'm_anl_score_' + str(nx) + 'ndim.csv'\n",
-    "path_kf = outdir + 'normal_EnKF' + str(mems) + 'm_anl_score_' + str(nx) + 'ndim.csv'\n",
+    "#path_kf = outdir + 'normal_EnKF' + str(mems) + 'm_anl_score_' + str(nx) + 'ndim.csv'\n",
     "path_enkf_anlinc = outdir + 'normal_EnKF' + str(mems) + 'm_anlinc_' + str(nx) + 'ndim.csv'\n",
-    "path_kf_anlinc = outdir + 'normal_EnKF' + str(mems) + 'm_anlinc_' + str(nx) + 'ndim.csv'\n",
+    "#path_kf_anlinc = outdir + 'normal_EnKF' + str(mems) + 'm_anlinc_' + str(nx) + 'ndim.csv'\n",
     "path_enkf_errcov = outdir + 'normal_EnKF' + str(mems) + 'm_errcov_' + str(nx) + 'ndim.csv'\n",
-    "path_kf_errcov = outdir + 'normal_EnKF' + str(mems) + 'm_errcov_' + str(nx) + 'ndim.csv'"
+    "#path_kf_errcov = outdir + 'normal_EnKF' + str(mems) + 'm_errcov_' + str(nx) + 'ndim.csv'"
    ]
   },
   {
@@ -368,7 +368,7 @@
    "source": [
     "true_score = csv2list(true_path).reshape(timeshape, nx)\n",
     "sim_score = csv2list(sim_path).reshape(timeshape, nx)\n",
-    "#obs_score = csv2list(obs_path).reshape(obs_timeshape, ny)"
+    "obs_score = csv2list(obs_path).reshape(obs_timeshape, ny)"
    ]
   },
   {
